# clinect

./: .gitignore  AUTO_SYNC_IMPLEMENTATION.md  BACKEND_CHAT_LLM_INSTRUCTIONS.md  BACKEND_FIREBASE_INSTRUCTIONS.md  CLAUDE.md  NEO4J_QUICK_START.md  README.md  app.py  database.py  docker-compose.yml  graph_models.py  init_db.py  init_mongo.py  init_neo4j.py  main.py  migrate_firebase.py  models.py  mongo_db.py  neo4j_db.py  pyproject.toml  sync_to_graph.py  trial_cache.py
static/css/: style.css
static/js/: app.js
templates/: index.html
