[project]
name = "clinect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-genai>=1.52.0",
    "google-generativeai>=0.8.5",
    "neo4j>=6.0.3",
    "psycopg>=3.2.13",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
